# GrindCore

./: .gitignore  LICENSE  README.md
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
libs/: CMakeLists.txt  generate_exports.ps1  generate_exports.sh
libs/GrindCore/: CMakeLists.txt  GrindCore.def  GrindCore.exports.list  GrindCore_unixexports.src  entrypoints.c  extra_libs.cmake  pal_brotli_v1_1_0.c  pal_brotli_v1_1_0.h  pal_facebook_zstd_v1_5_2.c  pal_facebook_zstd_v1_5_2.h  pal_facebook_zstd_v1_5_7.c  pal_facebook_zstd_v1_5_7.h  pal_hashes.c  pal_hashes.h  pal_lz4_lz4_v1_10_0.c  pal_lz4_lz4_v1_10_0.h  pal_mcmilk.c  pal_mcmilk.h  pal_mcmilk_fast-lzma2.c  pal_mcmilk_fast-lzma2.h  pal_mcmilk_hashes.c  pal_mcmilk_hashes.h  pal_mcmilk_lz4_v1_9_4.c  pal_mcmilk_lz4_v1_9_4.h  pal_mcmilk_lzma_v24_07.c  pal_mcmilk_lzma_v24_07.h  pal_mcmilk_zstd_v1_5_2.c  pal_mcmilk_zstd_v1_5_2.h  pal_mcmilk_zstd_v1_5_6.c  pal_mcmilk_zstd_v1_5_6.h  pal_sevenzip_lzma_v25_01.c  pal_sevenzip_lzma_v25_01.h  pal_zlib-ng_v2_2_1.c  pal_zlib-ng_v2_2_1.h  pal_zlib.c  pal_zlib.h  pal_zlib_types.h  pal_zlib_v1_3_1.c  pal_zlib_v1_3_1.h  zlib_allocator_unix.c  (+3 more)
tests/: CMakeLists.txt  lzma_stress_test  lzma_stress_test.c  lzma_test  lzma_test.c  lzma_test_minimal.h  run_lzma_test_with_so_arm.sh  run_lzma_test_with_so_x64.sh
